Ensure zoom to fit button on method-draw doesn't get overlapped Also tweaks media switch for zoom position

--- a/resources/robopaint.method-draw.css
+++ b/resources/robopaint.method-draw.css
@@ -11,13 +11,20 @@ button.zoomfit {
   bottom: 10px;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 850px) {
   #zoom_panel {
     right: 5px;
   }
 
   button.zoomfit {
     right: 73px;
+  }
+}
+
+/* Hide Zoom button to keep it from underlapping autopaint button */
+@media (max-width: 655px) {
+  button.zoomfit {
+    display: none;
   }
 }
 
